<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="org.vgecalumni.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:summary="Manage your account settings and app permissions"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="org.vgecalumni.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:summary="Enable/Disable notifications , change ringtone and vibration setting"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="org.vgecalumni.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:summary="Decide sync data schedule time"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
