<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Components.Profile.Add_Education">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chek_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/hint_curstudy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_edu_join"
                style="@style/TextInput"
                android:layout_weight="1"
                android:hint="@string/hint_join">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_edu_join"
                    style="@style/TextEdit"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_edu_end"
                style="@style/TextInput"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:hint="@string/hint_end">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_edu_end"
                    style="@style/TextEdit"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lay_user_stream"
            style="@style/TextInput"
            android:hint="@string/hint_field">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_stream"
                style="@style/TextEdit" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lay_degree"
            style="@style/TextInput"
            android:hint="@string/hint_degree">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_degree"
                style="@style/TextEdit" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lay_inst"
            style="@style/TextInput"
            android:hint="@string/hint_inst">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_inst"
                style="@style/TextEdit" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lay_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</FrameLayout>