<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Components.Profile.Profile_Edit">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_firstname"
                    style="@style/TextInput"
                    android:layout_weight="1"
                    android:hint="@string/hint_fname">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_firstname"
                        style="@style/TextEdit" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_midlename"
                    style="@style/TextInput"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_midle">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_midlename"
                        style="@style/TextEdit" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rdb_gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:checkedButton="@id/user_gen_male"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/user_gen_male"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/user_gen_female"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Female" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_dob"
                    style="@style/TextInput"
                    android:hint="@string/hint_dob">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_dob"
                        style="@style/TextEdit"
                        android:focusable="false" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_district"
                    style="@style/TextInput"
                    android:layout_weight="1"
                    android:hint="@string/hint_district">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_district"
                        style="@style/TextEdit" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lay_pincode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_pin"
                    app:errorEnabled="true">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_pincode"
                        style="@style/TextEdit"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/rm_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:text="@string/hint_rmpic"
                android:textColor="@color/colorPrimary" />

            <!--  <android.support.design.widget.TextInputLayout
                  style="@style/TextInput"
                  android:hint="@string/hint_enroll"
                  app:errorEnabled="true"
                  android:id="@+id/lay_enroll">

                  <android.support.v7.widget.AppCompatEditText
                      android:id="@+id/user_enroll"
                      style="@style/TextEdit"
                      android:inputType="number"/>
              </android.support.design.widget.TextInputLayout>

              <android.support.v7.widget.AppCompatSpinner
                  android:id="@+id/user_program"
                  style="@style/Spinner"
                  android:entries="@array/program"
                  android:layout_marginBottom="10dp"/>

              <android.support.v7.widget.AppCompatSpinner
                  android:id="@+id/user_degree"
                  style="@style/Spinner"
                  android:entries="@array/branch"
                  android:layout_marginBottom="10dp"/>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="2"
                  android:baselineAligned="true"> -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_lastname"
                style="@style/TextInput"
                android:hint="@string/hint_lname">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_lastname"
                    style="@style/TextEdit" />
            </android.support.design.widget.TextInputLayout>


            <!-- <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/user_gender"
                 style="@style/Spinner"
                 android:layout_weight="1"
                 android:entries="@array/gender"/>

             <android.support.design.widget.TextInputLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                 android:layout_marginEnd="15dp"
                 android:layout_weight="1"
                 android:hint="@string/hint_dob"
                 app:errorEnabled="true"
                 android:id="@+id/lay_dob">

                 <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/user_dob"
                     style="@style/TextEdit"
                     android:inputType="number"/>
             </android.support.design.widget.TextInputLayout>

         </LinearLayout> -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_address"
                style="@style/TextInput"
                android:hint="@string/hint_address">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_address"
                    style="@style/TextEditBig" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_city"
                style="@style/TextInput"
                android:hint="@string/hint_city">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_city"
                    style="@style/TextEdit" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_state"
                style="@style/TextInput"
                android:hint="@string/hint_state">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_state"
                    style="@style/TextEdit" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lay_intro"
                style="@style/TextInput"
                android:hint="@string/hint_intro">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_intro"
                    style="@style/TextEditBig" />
            </android.support.design.widget.TextInputLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/camera2" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/lay_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_overlay"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </FrameLayout>

</ScrollView>